[package]
name = "ilbm"
version = "0.1.0"
authors = ["Andy Philpotts <andy@failfree.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0"
log = "0.4"

[dev-dependencies]
anyhow = "1.0"
env_logger = "0.7.1"
show-image = "0.6"
argh = "0.1"
